force-app/main/default/objects/OracleSettings__c/OracleSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Oracle Settings</label>
</CustomObject>