force-app/main/default/objects/OracleSettings__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>URL for Oracle Service Cloud</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>