force-app/main/default/objects/OracleSettings__c/fields/Salesforce_API_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_API_User__c</fullName>
    <label>Salesforce API User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>