force-app/main/default/objects/OracleSettings__c/fields/Service_URL__c.field-meta.xml
<CustomField>
    <fullName>Service_URL__c</fullName>
    <label>Service URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>